--- a/AP2-EX3/build.gradle
+++ b/AP2-EX3/build.gradle
@@ -26,6 +26,6 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-dataBinding {
-    enabled = true
-}
+//dataBinding {
+//    enabled = false
+//}
